[tool.poetry]
name = "aula-aovivo-2"
version = "0.1.0"
description = ""
authors = ["Lucas Silva <silva.pereira.92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.2.0"
duckdb = "^1.1.2"
streamlit = "^1.39.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
